# mastrmnd

./: .gitignore
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
client/src/: App.jsx  App.tsx  ClientTable.tsx  ClientView.tsx  main.jsx
client/src/api/: clients.tsx
client/src/lib/: AlbumView.tsx  AllClients.tsx  ArtistView.tsx  ClientPage.tsx  ClientRow.tsx  ClientTable.tsx  Library.tsx  types.ts
main/: Cargo.toml  build.rs
main/proto/: mastrmnd.proto
main/src/client/: main.rs  mod.rs  music.rs
main/src/server/: client_state.rs  http_server.rs  library.rs  main.rs  mastrmnd.rs  mod.rs  tracker.rs
